<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_GlobalData" Id="{161c531f-fe39-4ab8-ab3e-d74c17192a82}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
// Global
	b_BA_Hand		: BOOL;		// Betriebsart Hand
	b_BA_Auto		: BOOL;		// Betriebsart Automatik
	// Zahlenarray
	n_Array: ARRAY[0..1000] OF LINT;
	n_ArrayMax: ARRAY[0..65535] OF LINT;
	DataArray:	ARRAY[0..100] OF DINT;
	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>